# Survivex

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  __init__.py  benchmark_gpu_scaling.ipynb  benchmark_survivex_vs_r.ipynb  compare_multistate.R  minimal_test_long.R  pre_config.sh  project_structure_create.sh  pyproject.toml  r_validation_script.R  requirements-dev.txt  requirements.txt  setup.py  setup_gitignore.sh  setup_pyprojecttoml.sh  validate_accuracy.ipynb  validate_km.R
.github/workflows/: ci.yml  publish.yml
binder/: postBuild  requirements.txt
examples/: getting_started.ipynb
survivex/: __init__.py  check_structure.sh  pyproject.toml
survivex-env/: pyvenv.cfg
survivex/core/: __init__.py  data.py
survivex/datasets/: __init__.py  converters.py  loaders.py  validators.py
survivex/example/: lung_cancer.py
survivex/models/: __init__.py  andersen_gill.py  competing_risk.py  cox_ph.py  frailty.py  gradient_boosting_survival.py  kaplan_meier.py  log_rank_test.py  multi_state.py  nelson_aalen.py  parametric_models.py  pwp.py  random_survival_tree.py  recurrent_event.py  survival_tree.py
tests/: benchmark_recurrent_R.R  create_dataset.r  run_all_validation_cox.py  test_competing_risk.py  test_competing_risk_r.py  test_coxph.py  test_datasets.py  test_datasets_loader.py  test_fine_gray.py  test_general_msm.py  test_gradient_boost.py  test_logranktest.py  test_model_kaplanmeier.py  test_msm_cox.py  test_nelsonaalen.py  test_parametric.py  test_pwp.r  test_pwp_tt.py  test_random_survtree.py  test_recurrent.py  test_survival_tree.py  validate_cox_ph_extended.py  validate_recurrent_R.R
