# pyproject.toml
[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "survivex"
version = "0.1.0"
description = "GPU-accelerated survival analysis library"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Tanin Zeraati", email = "your.email@example.com"}
]
keywords = ["survival analysis", "cox model", "kaplan-meier", "multi-state", "competing risks"]

dependencies = [
    "torch>=1.9.0",
    "numpy>=1.20.0",
    "pandas>=1.3.0",
    "scipy>=1.7.0",
    "matplotlib>=3.4.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=6.0",
    "pytest-cov>=2.12",
    "black>=21.0",
]

[project.urls]
Homepage = "https://github.com/TaninZeraati/survivex"
Repository = "https://github.com/TaninZeraati/survivex"
```

---

### **4. Create `.gitignore` (if not already exists)**
```
# .gitignore
# Python
__pycache__/
*.py[cod]
*$py.class
*.so
.Python
build/
develop-eggs/
dist/
downloads/
eggs/
.eggs/
lib/
lib64/
parts/
sdist/
var/
wheels/
*.egg-info/
.installed.cfg
*.egg

# Virtual environments
venv/
ENV/
env/

# IDE
.vscode/
.idea/
*.swp
*.swo

# Testing
.pytest_cache/
.coverage
htmlcov/

# OS
.DS_Store
Thumbs.db