[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "survivex"
version = "0.1.0"
description = "Advanced survival analysis library with GPU acceleration"
authors = [
    {name = "Tanin Zeraati", email = "tanin@example.com"}
]
license = {text = "Apache-2.0"}
readme = "README.md"
requires-python = ">=3.8"
keywords = [
    "survival analysis",
    "statistics", 
    "biostatistics",
    "gpu acceleration",
    "pytorch",
    "kaplan-meier",
    "cox regression",
    "multi-state models"
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
]

dependencies = [
    "torch>=2.0.0",
    "numpy>=1.21.0",
    "pandas>=1.3.0",
    "scipy>=1.7.0",
    "matplotlib>=3.4.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
]

[project.urls]
Homepage = "https://github.com/TaninZeraati/survivex"
Repository = "https://github.com/TaninZeraati/survivex"

[tool.setuptools]
# Explicitly include all packages
packages = ["survivex", "survivex.models", "survivex.core", "survivex.datasets", "survivex.utils", "survivex.visualization"]

[tool.setuptools.package-data]
survivex = ["**/*.py"]